# solar-server

./: .gitignore  README.md  justfile
.github/: copilot-instructions.md  requirements.txt
.github/workflows/: ci.yml
guestbook/: README.md  justfile  response.txt
guestbook/src/: guestbook.hh  guestbook_test.cc  integration_test.sh  main.cc  meson.build
guestbook/util/: deploy.sh  lighttpd-guestbook.conf  logrotate-lighttpd.conf
lighttpd/: logrotate.conf  solar-server.conf
logger/: README.md  justfile
logger/src/: curl.cc  curl.hh  logger_test.cc  main.cc  meson.build  report.cc  report.hh  transform.cc  transform.hh  unit.hh  weather.cc  weather.hh
logger/util/: update-status.service  update-status.sh  update-status.timer
renogy/: README.md  justfile
renogy/src/: meson.build  modbus.cc  modbus.hh  renogy.cc  renogy.hh  renogy_test.cc  serial.cc  serial.hh
shell/: README.md  justfile
shell/src/: command.cc  command.hh  config.hh  guestbook_io.cc  guestbook_io.hh  main.cc  meson.build  renderer.hh  shell.cc  shell.hh  shell_test.cc  signal_state.hh  text_renderer.cc  text_renderer.hh
website/: hugo.toml  justfile
website/content/blog/: thinking-small.md
website/content/guestbook/: _index.md
website/public/: index.html  sitemap.xml
website/public/blog/: index.html  index.xml
website/public/categories/: index.html
website/public/css/: status.min.ef65348ab53334935ead9fa1da658dd78a2f87d319870cea989895cf6061260d.css
website/public/posts/: index.html
website/public/posts/post-1/: index.html
website/public/posts/post-2/: index.html
website/public/posts/post-3/: index.html
website/public/tags/: index.html
website/public/tags/blue/: index.html
website/public/tags/green/: index.html
website/public/tags/red/: index.html
website/themes/northwoods/: hugo.toml  theme.toml
website/themes/northwoods/assets/css/: status.css
website/themes/northwoods/layouts/_default/: baseof.html
website/themes/northwoods/layouts/guestbook/: list.html  single.html
website/themes/northwoods/layouts/partials/: footer.html  guestbook-form.html  header.html  status.html
website/themes/northwoods/layouts/partials/head/: css.html
